[RESTEASY-3138] Remove dependency on commons-io.
https://issues.redhat.com/browse/RESTEASY-3138
Signed-off-by: James R. Perkins <jperkins@redhat.com>