@@ -1,6 +1,5 @@
 package org.jboss.resteasy.test.client;
 
-import org.apache.commons.io.IOUtils;
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.container.test.api.RunAsClient;
 import org.jboss.arquillian.junit.Arquillian;
@@ -73,7 +72,7 @@ public class InputStreamTest extends ClientTestBase{
    @Test
    public void testInputStream() throws Exception {
       InputStream is = client.target(generateURL("/test")).request().get(InputStream.class);
-      byte[] buf = IOUtils.toByteArray(is);
+      byte[] buf = is.readAllBytes();
       String str = new String(buf);
       Assert.assertEquals("The returned inputStream doesn't contain expexted text", "hello world", str);
       logger.info("Text from inputstream: " + str);
@@ -90,7 +89,7 @@ public class InputStreamTest extends ClientTestBase{
    public void testInputStreamProxy() throws Exception {
       InputStreamInterface proxy = client.target(generateURL("/")).proxy(InputStreamInterface.class);
       InputStream is = proxy.get();
-      byte[] buf = IOUtils.toByteArray(is);
+      byte[] buf = is.readAllBytes();
       String str = new String(buf);
       Assert.assertEquals("The returned inputStream doesn't contain expexted text", "hello world", str);
       is.close();
